etapa_2/parser.output
Terminals unused in grammar

   TK_PR_THEN
   TK_PR_FOREACH
   TK_PR_SWITCH
   TK_PR_CASE
   TK_PR_CLASS
   TK_PR_PRIVATE
   TK_PR_PUBLIC
   TK_PR_PROTECTED
   TK_PR_END
   TK_PR_DEFAULT
   TK_OC_FORWARD_PIPE
   TK_OC_BASH_PIPE
   TOKEN_ERRO


State 204 conflicts: 16 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | global_decl program
    3        | func program

    4 global_decl: type global_list ';'
    5            | TK_PR_STATIC type global_list ';'

    6 global_list: TK_IDENTIFICADOR ',' global_list
    7            | TK_IDENTIFICADOR
    8            | TK_IDENTIFICADOR '[' TK_LIT_INT ']' ',' global_list
    9            | TK_IDENTIFICADOR '[' TK_LIT_INT ']'

   10 type: TK_PR_INT
   11     | TK_PR_FLOAT
   12     | TK_PR_BOOL
   13     | TK_PR_CHAR
   14     | TK_PR_STRING

   15 func: header body

   16 header: type TK_IDENTIFICADOR '(' ')'
   17       | type TK_IDENTIFICADOR '(' params ')'
   18       | TK_PR_STATIC type TK_IDENTIFICADOR '(' ')'
   19       | TK_PR_STATIC type TK_IDENTIFICADOR '(' params ')'

   20 params: type TK_IDENTIFICADOR ',' params
   21       | type TK_IDENTIFICADOR
   22       | TK_PR_CONST type TK_IDENTIFICADOR ',' params
   23       | TK_PR_CONST type TK_IDENTIFICADOR

   24 body: block

   25 block: '{' cmds '}'

   26 cmds: %empty
   27     | block ';' cmds
   28     | local_decl ';' cmds
   29     | attrib ';' cmds
   30     | io ';' cmds
   31     | func_call ';' cmds
   32     | shift ';' cmds
   33     | jmp_stmt ';' cmds
   34     | control ';' cmds

   35 local_decl: type local_list
   36           | TK_PR_CONST type local_list
   37           | TK_PR_STATIC TK_PR_CONST type local_list
   38           | TK_PR_STATIC type local_list

   39 local_list: TK_IDENTIFICADOR
   40           | TK_IDENTIFICADOR ',' local_list
   41           | TK_IDENTIFICADOR TK_OC_LE TK_IDENTIFICADOR
   42           | TK_IDENTIFICADOR TK_OC_LE literal
   43           | TK_IDENTIFICADOR TK_OC_LE TK_IDENTIFICADOR ',' local_list
   44           | TK_IDENTIFICADOR TK_OC_LE literal ',' local_list

   45 literal: TK_LIT_CHAR
   46        | TK_LIT_FALSE
   47        | TK_LIT_FLOAT
   48        | TK_LIT_INT
   49        | TK_LIT_STRING
   50        | TK_LIT_TRUE

   51 attrib: TK_IDENTIFICADOR '=' exp
   52       | TK_IDENTIFICADOR '[' exp ']' '=' exp

   53 io: TK_PR_INPUT TK_IDENTIFICADOR
   54   | TK_PR_OUTPUT TK_IDENTIFICADOR
   55   | TK_PR_OUTPUT literal

   56 func_call: TK_IDENTIFICADOR '(' exp_list ')'

   57 exp_list: exp
   58         | exp ',' exp_list

   59 shift: TK_IDENTIFICADOR TK_OC_SL TK_LIT_INT
   60      | TK_IDENTIFICADOR TK_OC_SR TK_LIT_INT
   61      | TK_IDENTIFICADOR '[' exp ']' TK_OC_SL TK_LIT_INT
   62      | TK_IDENTIFICADOR '[' exp ']' TK_OC_SR TK_LIT_INT

   63 jmp_stmt: TK_PR_RETURN
   64         | TK_PR_RETURN exp
   65         | TK_PR_BREAK
   66         | TK_PR_CONTINUE

   67 control: if
   68        | for
   69        | while

   70 if: TK_PR_IF '(' exp ')' block
   71   | TK_PR_IF '(' exp ')' block TK_PR_ELSE block

   72 for: TK_PR_FOR '(' attrib ':' exp ':' attrib ')' block

   73 while: TK_PR_WHILE '(' exp ')' TK_PR_DO block

   74 exp: operand
   75    | exp boperator operand
   76    | exp '?' exp ':' exp

   77 operand: num
   78        | unary

   79 num: TK_LIT_FLOAT
   80    | TK_LIT_INT

   81 unary: '+' unary
   82      | '-' unary
   83      | '!' unary
   84      | '&' unary
   85      | '*' unary
   86      | '#' unary
   87      | laoperand

   88 laoperand: TK_IDENTIFICADOR
   89          | TK_IDENTIFICADOR '[' exp ']'
   90          | bool
   91          | func_call
   92          | '(' exp ')'

   93 bool: TK_LIT_FALSE
   94     | TK_LIT_TRUE

   95 boperator: aoperator
   96          | loperator

   97 aoperator: '+'
   98          | '-'
   99          | '*'
  100          | '/'
  101          | '%'
  102          | '^'

  103 loperator: '|'
  104          | '&'
  105          | '<'
  106          | '>'
  107          | TK_OC_AND
  108          | TK_OC_EQ
  109          | TK_OC_GE
  110          | TK_OC_LE
  111          | TK_OC_NE
  112          | TK_OC_OR


Terminals, with rules where they appear

$end (0) 0
'!' (33) 83
'#' (35) 86
'%' (37) 101
'&' (38) 84 104
'(' (40) 16 17 18 19 56 70 71 72 73 92
')' (41) 16 17 18 19 56 70 71 72 73 92
'*' (42) 85 99
'+' (43) 81 97
',' (44) 6 8 20 22 40 43 44 58
'-' (45) 82 98
'/' (47) 100
':' (58) 72 76
';' (59) 4 5 27 28 29 30 31 32 33 34
'<' (60) 105
'=' (61) 51 52
'>' (62) 106
'?' (63) 76
'[' (91) 8 9 52 61 62 89
']' (93) 8 9 52 61 62 89
'^' (94) 102
'{' (123) 25
'|' (124) 103
'}' (125) 25
error (256)
TK_PR_INT (258) 10
TK_PR_FLOAT (259) 11
TK_PR_BOOL (260) 12
TK_PR_CHAR (261) 13
TK_PR_STRING (262) 14
TK_PR_IF (263) 70 71
TK_PR_THEN (264)
TK_PR_ELSE (265) 71
TK_PR_WHILE (266) 73
TK_PR_DO (267) 73
TK_PR_INPUT (268) 53
TK_PR_OUTPUT (269) 54 55
TK_PR_RETURN (270) 63 64
TK_PR_CONST (271) 22 23 36 37
TK_PR_STATIC (272) 5 18 19 37 38
TK_PR_FOREACH (273)
TK_PR_FOR (274) 72
TK_PR_SWITCH (275)
TK_PR_CASE (276)
TK_PR_BREAK (277) 65
TK_PR_CONTINUE (278) 66
TK_PR_CLASS (279)
TK_PR_PRIVATE (280)
TK_PR_PUBLIC (281)
TK_PR_PROTECTED (282)
TK_PR_END (283)
TK_PR_DEFAULT (284)
TK_OC_LE (285) 41 42 43 44 110
TK_OC_GE (286) 109
TK_OC_EQ (287) 108
TK_OC_NE (288) 111
TK_OC_AND (289) 107
TK_OC_OR (290) 112
TK_OC_SL (291) 59 61
TK_OC_SR (292) 60 62
TK_OC_FORWARD_PIPE (293)
TK_OC_BASH_PIPE (294)
TK_LIT_INT (295) 8 9 48 59 60 61 62 80
TK_LIT_FLOAT (296) 47 79
TK_LIT_FALSE (297) 46 93
TK_LIT_TRUE (298) 50 94
TK_LIT_CHAR (299) 45
TK_LIT_STRING (300) 49
TK_IDENTIFICADOR (301) 6 7 8 9 16 17 18 19 20 21 22 23 39 40 41 42
    43 44 51 52 53 54 56 59 60 61 62 88 89
TOKEN_ERRO (302)


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
program (72)
    on left: 1 2 3, on right: 0 2 3
global_decl (73)
    on left: 4 5, on right: 2
global_list (74)
    on left: 6 7 8 9, on right: 4 5 6 8
type (75)
    on left: 10 11 12 13 14, on right: 4 5 16 17 18 19 20 21 22 23
    35 36 37 38
func (76)
    on left: 15, on right: 3
header (77)
    on left: 16 17 18 19, on right: 15
params (78)
    on left: 20 21 22 23, on right: 17 19 20 22
body (79)
    on left: 24, on right: 15
block (80)
    on left: 25, on right: 24 27 70 71 72 73
cmds (81)
    on left: 26 27 28 29 30 31 32 33 34, on right: 25 27 28 29 30 31
    32 33 34
local_decl (82)
    on left: 35 36 37 38, on right: 28
local_list (83)
    on left: 39 40 41 42 43 44, on right: 35 36 37 38 40 43 44
literal (84)
    on left: 45 46 47 48 49 50, on right: 42 44 55
attrib (85)
    on left: 51 52, on right: 29 72
io (86)
    on left: 53 54 55, on right: 30
func_call (87)
    on left: 56, on right: 31 91
exp_list (88)
    on left: 57 58, on right: 56 58
shift (89)
    on left: 59 60 61 62, on right: 32
jmp_stmt (90)
    on left: 63 64 65 66, on right: 33
control (91)
    on left: 67 68 69, on right: 34
if (92)
    on left: 70 71, on right: 67
for (93)
    on left: 72, on right: 68
while (94)
    on left: 73, on right: 69
exp (95)
    on left: 74 75 76, on right: 51 52 57 58 61 62 64 70 71 72 73 75
    76 89 92
operand (96)
    on left: 77 78, on right: 74 75
num (97)
    on left: 79 80, on right: 77
unary (98)
    on left: 81 82 83 84 85 86 87, on right: 78 81 82 83 84 85 86
laoperand (99)
    on left: 88 89 90 91 92, on right: 87
bool (100)
    on left: 93 94, on right: 90
boperator (101)
    on left: 95 96, on right: 75
aoperator (102)
    on left: 97 98 99 100 101 102, on right: 95
loperator (103)
    on left: 103 104 105 106 107 108 109 110 111 112, on right: 96


State 0

    0 $accept: . program $end

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 1 (program)

    program      go to state 7
    global_decl  go to state 8
    type         go to state 9
    func         go to state 10
    header       go to state 11


State 1

   10 type: TK_PR_INT .

    $default  reduce using rule 10 (type)


State 2

   11 type: TK_PR_FLOAT .

    $default  reduce using rule 11 (type)


State 3

   12 type: TK_PR_BOOL .

    $default  reduce using rule 12 (type)


State 4

   13 type: TK_PR_CHAR .

    $default  reduce using rule 13 (type)


State 5

   14 type: TK_PR_STRING .

    $default  reduce using rule 14 (type)


State 6

    5 global_decl: TK_PR_STATIC . type global_list ';'
   18 header: TK_PR_STATIC . type TK_IDENTIFICADOR '(' ')'
   19       | TK_PR_STATIC . type TK_IDENTIFICADOR '(' params ')'

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    type  go to state 12


State 7

    0 $accept: program . $end

    $end  shift, and go to state 13


State 8

    2 program: global_decl . program

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 1 (program)

    program      go to state 14
    global_decl  go to state 8
    type         go to state 9
    func         go to state 10
    header       go to state 11


State 9

    4 global_decl: type . global_list ';'
   16 header: type . TK_IDENTIFICADOR '(' ')'
   17       | type . TK_IDENTIFICADOR '(' params ')'

    TK_IDENTIFICADOR  shift, and go to state 15

    global_list  go to state 16


State 10

    3 program: func . program

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 1 (program)

    program      go to state 17
    global_decl  go to state 8
    type         go to state 9
    func         go to state 10
    header       go to state 11


State 11

   15 func: header . body

    '{'  shift, and go to state 18

    body   go to state 19
    block  go to state 20


State 12

    5 global_decl: TK_PR_STATIC type . global_list ';'
   18 header: TK_PR_STATIC type . TK_IDENTIFICADOR '(' ')'
   19       | TK_PR_STATIC type . TK_IDENTIFICADOR '(' params ')'

    TK_IDENTIFICADOR  shift, and go to state 21

    global_list  go to state 22


State 13

    0 $accept: program $end .

    $default  accept


State 14

    2 program: global_decl program .

    $default  reduce using rule 2 (program)


State 15

    6 global_list: TK_IDENTIFICADOR . ',' global_list
    7            | TK_IDENTIFICADOR .
    8            | TK_IDENTIFICADOR . '[' TK_LIT_INT ']' ',' global_list
    9            | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'
   16 header: type TK_IDENTIFICADOR . '(' ')'
   17       | type TK_IDENTIFICADOR . '(' params ')'

    ','  shift, and go to state 23
    '['  shift, and go to state 24
    '('  shift, and go to state 25

    $default  reduce using rule 7 (global_list)


State 16

    4 global_decl: type global_list . ';'

    ';'  shift, and go to state 26


State 17

    3 program: func program .

    $default  reduce using rule 3 (program)


State 18

   25 block: '{' . cmds '}'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 27
    TK_PR_WHILE       shift, and go to state 28
    TK_PR_INPUT       shift, and go to state 29
    TK_PR_OUTPUT      shift, and go to state 30
    TK_PR_RETURN      shift, and go to state 31
    TK_PR_CONST       shift, and go to state 32
    TK_PR_STATIC      shift, and go to state 33
    TK_PR_FOR         shift, and go to state 34
    TK_PR_BREAK       shift, and go to state 35
    TK_PR_CONTINUE    shift, and go to state 36
    TK_IDENTIFICADOR  shift, and go to state 37
    '{'               shift, and go to state 18

    $default  reduce using rule 26 (cmds)

    type        go to state 38
    block       go to state 39
    cmds        go to state 40
    local_decl  go to state 41
    attrib      go to state 42
    io          go to state 43
    func_call   go to state 44
    shift       go to state 45
    jmp_stmt    go to state 46
    control     go to state 47
    if          go to state 48
    for         go to state 49
    while       go to state 50


State 19

   15 func: header body .

    $default  reduce using rule 15 (func)


State 20

   24 body: block .

    $default  reduce using rule 24 (body)


State 21

    6 global_list: TK_IDENTIFICADOR . ',' global_list
    7            | TK_IDENTIFICADOR .
    8            | TK_IDENTIFICADOR . '[' TK_LIT_INT ']' ',' global_list
    9            | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'
   18 header: TK_PR_STATIC type TK_IDENTIFICADOR . '(' ')'
   19       | TK_PR_STATIC type TK_IDENTIFICADOR . '(' params ')'

    ','  shift, and go to state 23
    '['  shift, and go to state 24
    '('  shift, and go to state 51

    $default  reduce using rule 7 (global_list)


State 22

    5 global_decl: TK_PR_STATIC type global_list . ';'

    ';'  shift, and go to state 52


State 23

    6 global_list: TK_IDENTIFICADOR ',' . global_list

    TK_IDENTIFICADOR  shift, and go to state 53

    global_list  go to state 54


State 24

    8 global_list: TK_IDENTIFICADOR '[' . TK_LIT_INT ']' ',' global_list
    9            | TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 55


State 25

   16 header: type TK_IDENTIFICADOR '(' . ')'
   17       | type TK_IDENTIFICADOR '(' . params ')'

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 56
    ')'           shift, and go to state 57

    type    go to state 58
    params  go to state 59


State 26

    4 global_decl: type global_list ';' .

    $default  reduce using rule 4 (global_decl)


State 27

   70 if: TK_PR_IF . '(' exp ')' block
   71   | TK_PR_IF . '(' exp ')' block TK_PR_ELSE block

    '('  shift, and go to state 60


State 28

   73 while: TK_PR_WHILE . '(' exp ')' TK_PR_DO block

    '('  shift, and go to state 61


State 29

   53 io: TK_PR_INPUT . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 62


State 30

   54 io: TK_PR_OUTPUT . TK_IDENTIFICADOR
   55   | TK_PR_OUTPUT . literal

    TK_LIT_INT        shift, and go to state 63
    TK_LIT_FLOAT      shift, and go to state 64
    TK_LIT_FALSE      shift, and go to state 65
    TK_LIT_TRUE       shift, and go to state 66
    TK_LIT_CHAR       shift, and go to state 67
    TK_LIT_STRING     shift, and go to state 68
    TK_IDENTIFICADOR  shift, and go to state 69

    literal  go to state 70


State 31

   63 jmp_stmt: TK_PR_RETURN .
   64         | TK_PR_RETURN . exp

    TK_LIT_INT        shift, and go to state 71
    TK_LIT_FLOAT      shift, and go to state 72
    TK_LIT_FALSE      shift, and go to state 73
    TK_LIT_TRUE       shift, and go to state 74
    TK_IDENTIFICADOR  shift, and go to state 75
    '('               shift, and go to state 76
    '+'               shift, and go to state 77
    '-'               shift, and go to state 78
    '!'               shift, and go to state 79
    '&'               shift, and go to state 80
    '*'               shift, and go to state 81
    '#'               shift, and go to state 82

    $default  reduce using rule 63 (jmp_stmt)

    func_call  go to state 83
    exp        go to state 84
    operand    go to state 85
    num        go to state 86
    unary      go to state 87
    laoperand  go to state 88
    bool       go to state 89


State 32

   36 local_decl: TK_PR_CONST . type local_list

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    type  go to state 90


State 33

   37 local_decl: TK_PR_STATIC . TK_PR_CONST type local_list
   38           | TK_PR_STATIC . type local_list

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 91

    type  go to state 92


State 34

   72 for: TK_PR_FOR . '(' attrib ':' exp ':' attrib ')' block

    '('  shift, and go to state 93


State 35

   65 jmp_stmt: TK_PR_BREAK .

    $default  reduce using rule 65 (jmp_stmt)


State 36

   66 jmp_stmt: TK_PR_CONTINUE .

    $default  reduce using rule 66 (jmp_stmt)


State 37

   51 attrib: TK_IDENTIFICADOR . '=' exp
   52       | TK_IDENTIFICADOR . '[' exp ']' '=' exp
   56 func_call: TK_IDENTIFICADOR . '(' exp_list ')'
   59 shift: TK_IDENTIFICADOR . TK_OC_SL TK_LIT_INT
   60      | TK_IDENTIFICADOR . TK_OC_SR TK_LIT_INT
   61      | TK_IDENTIFICADOR . '[' exp ']' TK_OC_SL TK_LIT_INT
   62      | TK_IDENTIFICADOR . '[' exp ']' TK_OC_SR TK_LIT_INT

    TK_OC_SL  shift, and go to state 94
    TK_OC_SR  shift, and go to state 95
    '['       shift, and go to state 96
    '('       shift, and go to state 97
    '='       shift, and go to state 98


State 38

   35 local_decl: type . local_list

    TK_IDENTIFICADOR  shift, and go to state 99

    local_list  go to state 100


State 39

   27 cmds: block . ';' cmds

    ';'  shift, and go to state 101


State 40

   25 block: '{' cmds . '}'

    '}'  shift, and go to state 102


State 41

   28 cmds: local_decl . ';' cmds

    ';'  shift, and go to state 103


State 42

   29 cmds: attrib . ';' cmds

    ';'  shift, and go to state 104


State 43

   30 cmds: io . ';' cmds

    ';'  shift, and go to state 105


State 44

   31 cmds: func_call . ';' cmds

    ';'  shift, and go to state 106


State 45

   32 cmds: shift . ';' cmds

    ';'  shift, and go to state 107


State 46

   33 cmds: jmp_stmt . ';' cmds

    ';'  shift, and go to state 108


State 47

   34 cmds: control . ';' cmds

    ';'  shift, and go to state 109


State 48

   67 control: if .

    $default  reduce using rule 67 (control)


State 49

   68 control: for .

    $default  reduce using rule 68 (control)


State 50

   69 control: while .

    $default  reduce using rule 69 (control)


State 51

   18 header: TK_PR_STATIC type TK_IDENTIFICADOR '(' . ')'
   19       | TK_PR_STATIC type TK_IDENTIFICADOR '(' . params ')'

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 56
    ')'           shift, and go to state 110

    type    go to state 58
    params  go to state 111


State 52

    5 global_decl: TK_PR_STATIC type global_list ';' .

    $default  reduce using rule 5 (global_decl)


State 53

    6 global_list: TK_IDENTIFICADOR . ',' global_list
    7            | TK_IDENTIFICADOR .
    8            | TK_IDENTIFICADOR . '[' TK_LIT_INT ']' ',' global_list
    9            | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'

    ','  shift, and go to state 23
    '['  shift, and go to state 24

    $default  reduce using rule 7 (global_list)


State 54

    6 global_list: TK_IDENTIFICADOR ',' global_list .

    $default  reduce using rule 6 (global_list)


State 55

    8 global_list: TK_IDENTIFICADOR '[' TK_LIT_INT . ']' ',' global_list
    9            | TK_IDENTIFICADOR '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 112


State 56

   22 params: TK_PR_CONST . type TK_IDENTIFICADOR ',' params
   23       | TK_PR_CONST . type TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    type  go to state 113


State 57

   16 header: type TK_IDENTIFICADOR '(' ')' .

    $default  reduce using rule 16 (header)


State 58

   20 params: type . TK_IDENTIFICADOR ',' params
   21       | type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 114


State 59

   17 header: type TK_IDENTIFICADOR '(' params . ')'

    ')'  shift, and go to state 115


State 60

   70 if: TK_PR_IF '(' . exp ')' block
   71   | TK_PR_IF '(' . exp ')' block TK_PR_ELSE block

    TK_LIT_INT        shift, and go to state 71
    TK_LIT_FLOAT      shift, and go to state 72
    TK_LIT_FALSE      shift, and go to state 73
    TK_LIT_TRUE       shift, and go to state 74
    TK_IDENTIFICADOR  shift, and go to state 75
    '('               shift, and go to state 76
    '+'               shift, and go to state 77
    '-'               shift, and go to state 78
    '!'               shift, and go to state 79
    '&'               shift, and go to state 80
    '*'               shift, and go to state 81
    '#'               shift, and go to state 82

    func_call  go to state 83
    exp        go to state 116
    operand    go to state 85
    num        go to state 86
    unary      go to state 87
    laoperand  go to state 88
    bool       go to state 89


State 61

   73 while: TK_PR_WHILE '(' . exp ')' TK_PR_DO block

    TK_LIT_INT        shift, and go to state 71
    TK_LIT_FLOAT      shift, and go to state 72
    TK_LIT_FALSE      shift, and go to state 73
    TK_LIT_TRUE       shift, and go to state 74
    TK_IDENTIFICADOR  shift, and go to state 75
    '('               shift, and go to state 76
    '+'               shift, and go to state 77
    '-'               shift, and go to state 78
    '!'               shift, and go to state 79
    '&'               shift, and go to state 80
    '*'               shift, and go to state 81
    '#'               shift, and go to state 82

    func_call  go to state 83
    exp        go to state 117
    operand    go to state 85
    num        go to state 86
    unary      go to state 87
    laoperand  go to state 88
    bool       go to state 89


State 62

   53 io: TK_PR_INPUT TK_IDENTIFICADOR .

    $default  reduce using rule 53 (io)


State 63

   48 literal: TK_LIT_INT .

    $default  reduce using rule 48 (literal)


State 64

   47 literal: TK_LIT_FLOAT .

    $default  reduce using rule 47 (literal)


State 65

   46 literal: TK_LIT_FALSE .

    $default  reduce using rule 46 (literal)


State 66

   50 literal: TK_LIT_TRUE .

    $default  reduce using rule 50 (literal)


State 67

   45 literal: TK_LIT_CHAR .

    $default  reduce using rule 45 (literal)


State 68

   49 literal: TK_LIT_STRING .

    $default  reduce using rule 49 (literal)


State 69

   54 io: TK_PR_OUTPUT TK_IDENTIFICADOR .

    $default  reduce using rule 54 (io)


State 70

   55 io: TK_PR_OUTPUT literal .

    $default  reduce using rule 55 (io)


State 71

   80 num: TK_LIT_INT .

    $default  reduce using rule 80 (num)


State 72

   79 num: TK_LIT_FLOAT .

    $default  reduce using rule 79 (num)


State 73

   93 bool: TK_LIT_FALSE .

    $default  reduce using rule 93 (bool)


State 74

   94 bool: TK_LIT_TRUE .

    $default  reduce using rule 94 (bool)


State 75

   56 func_call: TK_IDENTIFICADOR . '(' exp_list ')'
   88 laoperand: TK_IDENTIFICADOR .
   89          | TK_IDENTIFICADOR . '[' exp ']'

    '['  shift, and go to state 118
    '('  shift, and go to state 97

    $default  reduce using rule 88 (laoperand)


State 76

   92 laoperand: '(' . exp ')'

    TK_LIT_INT        shift, and go to state 71
    TK_LIT_FLOAT      shift, and go to state 72
    TK_LIT_FALSE      shift, and go to state 73
    TK_LIT_TRUE       shift, and go to state 74
    TK_IDENTIFICADOR  shift, and go to state 75
    '('               shift, and go to state 76
    '+'               shift, and go to state 77
    '-'               shift, and go to state 78
    '!'               shift, and go to state 79
    '&'               shift, and go to state 80
    '*'               shift, and go to state 81
    '#'               shift, and go to state 82

    func_call  go to state 83
    exp        go to state 119
    operand    go to state 85
    num        go to state 86
    unary      go to state 87
    laoperand  go to state 88
    bool       go to state 89


State 77

   81 unary: '+' . unary
